Support code wrapping in PDF and Print output. Fixes #348

--- a/MarkdownMonster/PreviewThemes/KavaDocs/Theme.css
+++ b/MarkdownMonster/PreviewThemes/KavaDocs/Theme.css
@@ -258,3 +258,16 @@ figure {
     color: rgb(8, 57, 129);
 }
 
+
+@media print {
+    pre {
+        white-space: pre-wrap;
+        word-break: normal;
+        word-wrap: normal;
+    }
+
+    pre > code {
+        white-space: pre-wrap;
+        padding: 1em !important;
+    }
+}
