--- a/MarkdownMonster/PreviewThemes/Westwind/Theme.css
+++ b/MarkdownMonster/PreviewThemes/Westwind/Theme.css
@@ -254,3 +254,17 @@ code.line-highlight {
         font-size: 1.06em;
     }
 }
+
+/* for PDF generation and print output */
+@media print {
+    pre {
+        white-space: pre-wrap;
+        word-break: normal;
+        word-wrap: normal;
+    }
+
+    pre > code {
+        white-space: pre-wrap;
+        padding: 1em !important;
+    }
+}
